[gd_scene load_steps=2 format=3 uid="uid://q5klqluwxyxi"]

[ext_resource type="Script" path="res://scenes/game/tp_gate/tp_gate.gd" id="1_uihdw"]

[node name="TpGate" type="Area2D"]
collision_layer = 0
collision_mask = 5
script = ExtResource("1_uihdw")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
